core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/echo.yf
---
name: contains
graphs:
  start:
    - {type: Echo, put: list, value: ["1","2"]}
