core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/stringToInt.yf
---
name: full
graphs:
  start:
     - type: Echo
       put: i
       value: "10"

     - type: IntConsumer
       input: "{i}"
